# fastapi-boilerplate

./: .env.example  Dockerfile  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: main.py
app/api/api_v1/: routers.py
app/api/api_v1/endpoints/: info.py  users.py
app/core/: config.py  database.py
app/crud/: __init__.py  user.py
app/exceptions/: core.py
app/models/: base.py  user.py
app/routers/: users.py
app/schemas/: __init__.py  base.py  info.py  user.py
migrations/: env.py
migrations/versions/: aea6bf12bcfa_add_user_table.py
tests/: test_connection.py
